# vendimint

./: Cargo.toml
machine/: Cargo.toml
machine/src/: main.rs
manager/: Cargo.toml
manager/src/: main.rs
