[workspace]
members = ["manager", "machine"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.87"
async-stream = "0.3.5"
async-trait = "0.1.82"
directories = "5.0.1"
fedimint-api-client = "0.4.2"
fedimint-bip39 = "0.4.2"
fedimint-client = "0.4.2"
fedimint-core = "0.4.2"
fedimint-ln-client = "0.4.2"
fedimint-ln-common = "0.4.2"
fedimint-mint-client = "0.4.2"
fedimint-rocksdb = "0.4.2"
iced = { version = "0.13.1", features = [
    "advanced",
    "qr_code",
    "svg",
    "tokio",
] }
lightning-invoice = "0.31.0"
nostr-sdk = "0.30.0"
palette = "0.7.6"
secp256k1 = { version = "0.28.2", features = ["global-context"] }
tokio = "1.40.0"

# Optimization of these deps significantly speeds
# up communication with fedimint federations.
[profile.dev.package]
bls12_381 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
